--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,26 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:windowSoftInputMode="stateHidden"
             android:name=".LoginActivity"
+            android:label="@string/app_name"
             android:theme="@style/generalnotitle"
-            android:label="@string/app_name">
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CalculatorActivity" />
+        <activity android:name=".FragmentCalculator" />
         <activity android:name=".ScientificCalculator" />
-        <activity android:name=".History"></activity>
+        <activity android:name=".History" />
+        <activity android:name=".FragmentDecisionMaking" />
+        <activity android:name=".DigitConversionActivity" />
+        <activity android:name=".UnitArea" />
+        <activity android:name=".UnitLength" />
+        <activity android:name=".UnitWeight" />
+        <activity android:name=".UnitTemperature" />
+        <activity android:name=".ContainerActivity"></activity>
     </application>
 
 </manifest>
